@@ -1,3 +1,10 @@
+2005-03-20  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* amd/readdir.c (amfs_readdir_browsable): use %p, not %lx.
+
+	* libamu/mount_fs.c (print_nfs_args): print pointer with %p, not
+	%lx.
+
 2005-03-18  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	*******************************************************************
